# Deference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Deference/: CMakeLists.txt  imgui.ini
Deference/res/models/: cube.glb  modern_dining_room.glb  neon_bedroom.glb  room_maru.glb  sci-fi_interior_room.glb  time_room.glb
Deference/res/models/bathroom/: license.txt  scene.gltf
Deference/res/models/flintlock/: license.txt  scene.gltf
Deference/res/models/hangar/: license.txt  scene.gltf
Deference/res/models/interior/: scene.gltf
Deference/res/models/pool/: license.txt  scene.gltf
Deference/res/models/pyramid_head/: license.txt  scene.gltf
Deference/res/models/restaurant/: scene.gltf
Deference/res/models/room/: license.txt  scene.gltf
Deference/res/models/room_maru/: license.txt
Deference/res/models/subway/: license.txt  scene.gltf
Deference/res/models/temple/: license.txt  scene.gltf
Deference/res/models/time_room/: license.txt  scene.gltf
Deference/res/models/void/: license.txt  scene.gltf
Deference/res/shaders/: Common.hlsl  GGX.hlsli  Hit.hlsl  Light.hlsli  ModelVertex.hlsli  PosColorPS.hlsl  PosColorVS.hlsl  Random.hlsli  RayGen.hlsl  Shading.hlsli  Shadow.hlsli  ShadowRay.hlsl  Transform.hlsli  Vertex.hlsli  accum.ps.hlsl  ao.rt.hlsl  diffuse.rt.hlsl  diffuseGI.rt.hlsl  geometry.ps.hlsl  geometry.rt.hlsl  geometry.vs.hlsl  hybrid.ps.hlsl  screen.vs.hlsl  tonemap.ps.hlsl
Deference/src/: pch.h  util.h
Deference/src/Core/: App.cpp  App.h  Input.cpp  Input.h  Main.cpp  Window.cpp  Window.h
Deference/src/DXR/: DXRHelper.h
Deference/src/Debug/: Exception.cpp  Exception.h
Deference/src/Effects/: HostDeviceShared.h
Deference/src/Effects/shaders/: GGX.hlsli  Halton.hlsli  Light.hlsli  Shading.hlsli  Shadow.hlsli  Transform.hlsli  Trigonometry.hlsli  Vertex.hlsli  accum.ps.hlsl  diffuse.ps.hlsl  diffuse.rt.hlsl  diffuseGI.rt.hlsl  geometry.ps.hlsl  geometry.rt.hlsl  geometry.vs.hlsl  hybrid.ps.hlsl  screen.vs.hlsl
Deference/src/Event/: Event.h  ModelEvent.h  WindowEvent.h
Deference/src/Graphics/: AccelStruct.cpp  BBox.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Commander.h  ConstantBuffer.cpp  ConstantBuffer.h  Context.h  DefModel.cpp  DefModel.h  DepthStencil.cpp  DepthStencil.h  Format.h  Graphics.cpp  Graphics.h  Heap.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  Rasterizer.cpp  Rasterizer.h  Raytracer.cpp  Raytracer.h  RenderTarget.cpp  RenderTarget.h  Resource.cpp  Resource.h  RootSig.cpp  RootSig.h  SceneData.h  Shader.cpp  ShaderAccessible.cpp  ShaderAccessible.h  ShaderResource.cpp  ShaderResource.h  Swapchain.cpp  Swapchain.h  (+8 more)
Deference/src/Graphics/Bindable/: Bindable.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  VertexBuffer.h  Viewport.cpp  Viewport.h
Deference/src/Graphics/Bindable/Heap/: AOConstants.cpp  AOConstants.h  AccelStruct.cpp  AccelStruct.h  ConstantBuffer.cpp  ConstantBuffer.h  DepthStencil.cpp  DepthStencil.h  DescriptorHeap.cpp  DescriptorHeap.h  Handle.h  Heap.cpp  Heap.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  RenderTarget.cpp  RenderTarget.h  Resource.cpp  Resource.h  Sampler.cpp  Sampler.h  Target.cpp  Target.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  UnorderedAccess.cpp  UnorderedAccess.h
Deference/src/Graphics/Bindable/Pipeline/: AOPipeline.cpp  AOPipeline.h  AccumPipeline.cpp  AccumPipeline.h  DiffuseGIPipeline.cpp  DiffuseGIPipeline.h  DiffusePipeline.cpp  DiffusePipeline.h  GeometryPipeline.cpp  GeometryPipeline.h  HybridOutPipeline.cpp  HybridOutPipeline.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Pipeline.cpp  Pipeline.h  RaytracedGeometryPipeline.cpp  RaytracedGeometryPipeline.h  RaytracingPipeline.cpp  RaytracingPipeline.h  ToneMapPipeline.cpp  ToneMapPipeline.h  VertexBuffer.cpp  VertexBuffer.h
Deference/src/Graphics/Bindable/Pipeline/Shader/: RootSig.cpp  RootSig.h  Shader.cpp  Shader.h
Deference/src/Graphics/DXR/: DXSampleHelper.h  Pipeline.cpp  Pipeline.h
Deference/src/Graphics/DXR/nv_helpers_dx12/: ShaderBindingTableGenerator.cpp
Deference/src/Graphics/Entity/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Model.cpp  Model.h  PointLight.h  Primitives.cpp  Primitives.h  Step.cpp  Step.h
Deference/src/Graphics/Frame/: AOPass.cpp  AOPass.h  AccumPass.cpp  AccumPass.h  BindablePass.cpp  BindablePass.h  ClearPass.cpp  ClearPass.h  CopyPass.cpp  CopyPass.h  DiffuseGIPass.cpp  DiffuseGIPass.h  DiffusePass.cpp  DiffusePass.h  FrameGraph.cpp  FrameGraph.h  GeometryGraph.cpp  GeometryGraph.h  GeometryPass.cpp  GeometryPass.h  HybridGraph.cpp  HybridGraph.h  HybridOutPass.cpp  HybridOutPass.h  LambertianGraph.cpp  LambertianGraph.h  LambertianPass.cpp  LambertianPass.h  Pass.cpp  Pass.h  PathTraceGraph.cpp  PathTraceGraph.h  RasterGraph.cpp  RasterGraph.h  RasterPass.cpp  RasterPass.h  RaytraceGraph.cpp  RaytraceGraph.h  RaytracePass.cpp  RaytracePass.h  (+10 more)
Deference/src/Graphics/Pipeline/: AOPipeline.cpp  AOPipeline.h  AccumPipeline.cpp  AccumPipeline.h  DiffuseGIPipeline.cpp  DiffuseGIPipeline.h  HybridOutPipeline.cpp  HybridOutPipeline.h  LambertianPipeline.cpp  LambertianPipeline.h  Pipeline.cpp  Pipeline.h  ToneMapPipeline.cpp  ToneMapPipeline.h
Deference/src/Graphics/Resource/: AccelStruct.cpp  AccelStruct.h  Bindable.h  Buffer.cpp  Buffer.h  BufferElement.h  ConstantBuffer.cpp  ConstantBuffer.h  DXC.cpp  DXC.h  DepthStencil.cpp  DepthStencil.h  DescriptorHeap.h  Handle.h  Heap.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.h  Pipeline.cpp  Pipeline.h  RaytracingPipeline.cpp  RaytracingPipeline.h  RenderTarget.cpp  RenderTarget.h  Resizeable.h  Resource.cpp  Resource.h  RootSig.cpp  RootSig.h  Sampler.h  Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h  Surface.h  Target.cpp  Target.h  Texture.cpp  Texture.h  UnorderedAccess.cpp  (+6 more)
Deference/src/Graphics/Scene/: Camera.cpp  Camera.h  Model.cpp  Model.h  Scene.h
Deference/src/Graphics/Shader/: RootSig.cpp  RootSig.h  Shader.cpp  Shader.h
Deference/src/Graphics/UI/: UI.cpp  UI.h
